Ready to deliver

--- a/app/views/sales_reports/sales_report.html.erb
+++ b/app/views/sales_reports/sales_report.html.erb
@@ -27,32 +27,32 @@ table, th, td {
         <td>YTD</td>
     </tr>
     <tr>
-        <td>From <%=params[:start_year]%> to <%=params[:start_year].to_i+1%></td>
-        <%for i in 0..11 do%>
-            <td>$ <%= @sales_value_per_month_by_start_year[i].round(2)%></td>
-        <%end%>       
-        <td>$ <%= @ytd_by_start_year[0].round(2)%></td> 
+        <td>From <%= params[:start_year] %> to <%= params[:start_year].to_i + 1 %></td>
+        <% for i in 0..11 %>
+            <td>$ <%= @sales_value_per_month_by_start_year[i].round(2) %></td>
+        <% end %>       
+        <td>$ <%= @ytd_by_start_year[0].round(2) %></td> 
     </tr>
     <tr>
-        <td>From <%=params[:end_year]%> to <%=params[:end_year].to_i+1%></td>
-        <%for i in 0..11 do%>
-            <td>$ <%= @sales_value_per_month_by_end_year[i].round(2)%></td>
-        <%end%>    
-        <td>$ <%= @ytd_by_end_year[0].round(2)%></td> 
+        <td>From <%= params[:end_year] %> to <%= params[:end_year].to_i + 1 %></td>
+        <% for i in 0..11 %>
+            <td>$ <%= @sales_value_per_month_by_end_year[i].round(2) %></td>
+        <% end %>    
+        <td>$ <%= @ytd_by_end_year[0].round(2) %></td> 
     </tr>
     <tr>
         <td>Diff</td>
-        <%for i in 0..11 do%>
-            <td>$ <%= (@sales_value_per_month_by_end_year[i]-@sales_value_per_month_by_start_year[i]).round(2)%></td>
-        <%end%> 
-        <td>$ <%= (@ytd_by_end_year[0]-@ytd_by_start_year[0]).round(2)%></td>
+        <% for i in 0..11 %>
+            <td>$ <%= (@sales_value_per_month_by_end_year[i] - @sales_value_per_month_by_start_year[i]).round(2) %></td>
+        <% end %> 
+        <td>$ <%= (@ytd_by_end_year[0] - @ytd_by_start_year[0]).round(2) %></td>
     </tr>
     <tr>
         <td>%</td>
-        <%for i in 0..11 do%>
-            <td> <%= ((@sales_value_per_month_by_end_year[i]-@sales_value_per_month_by_start_year[i])*100/@sales_value_per_month_by_start_year[i]).round(2) %> </td>
-        <%end%>
-        <td><%= ((@ytd_by_end_year[0]-@ytd_by_start_year[0])*100/-@ytd_by_start_year[0]).round(2)%></td>
+        <% for i in 0..11 %>
+            <td> <%= ((@sales_value_per_month_by_end_year[i] - @sales_value_per_month_by_start_year[i]) * 100 / @sales_value_per_month_by_start_year[i]).round(2) %> </td>
+        <% end %>
+        <td><%= ((@ytd_by_end_year[0] - @ytd_by_start_year[0]) * 100 / -@ytd_by_start_year[0]).round(2) %></td>
     </tr>
     <tr>
         <td>Comunity % AU Only</td>
@@ -60,14 +60,14 @@ table, th, td {
         <td colspan="12"></td>
     </tr>
     <tr>
-        <td>January - <%=params[:start_year]%> (MTD)</td>
-        <td>$ <%= @mtd_by_start_year[0].round(2)%></td>
+        <td>January - <%= params[:start_year] %> (MTD)</td>
+        <td>$ <%= @mtd_by_start_year[0].round(2) %></td>
         <td colspan="12"></td>
     </tr>
     <tr>
-        <td>January - <%=params[:end_year]%> (MTD)</td>
-        <td>$ <%= @mtd_by_end_year[0].round(2)%></td>
-        <td colspan="12">Percentage change: <%= ((@mtd_by_end_year[0]-@mtd_by_start_year[0])*100/@mtd_by_start_year[0]).round(2)%>%</td>
+        <td>January - <%= params[:end_year] %> (MTD)</td>
+        <td>$ <%= @mtd_by_end_year[0].round(2) %></td>
+        <td colspan="12">Percentage change: <%= ((@mtd_by_end_year[0] - @mtd_by_start_year[0]) * 100 / @mtd_by_start_year[0]).round(2) %>%</td>
     </tr>        
 </table>
 <br/><br/>
@@ -93,41 +93,41 @@ table, th, td {
         <td>YTD</td>
     </tr>
     <tr>
-        <td>From <%=params[:start_year]%> to <%=params[:start_year].to_i+1%></td>
-        <%for i in 0..11 do%>
-            <td>$ <%= @sales_profit_per_month_by_start_year[i].round(2)%></td>
-        <%end%> 
-        <td>$ <%= @ytd_by_start_year[1].round(2)%></td>      
+        <td>From <%= params[:start_year] %> to <%= params[:start_year].to_i + 1 %></td>
+        <% for i in 0..11 %>
+            <td>$ <%= @sales_profit_per_month_by_start_year[i].round(2) %></td>
+        <% end %> 
+        <td>$ <%= @ytd_by_start_year[1].round(2) %></td>      
     </tr>
     <tr>
-        <td>From <%=params[:end_year]%> to <%=params[:end_year].to_i+1%></td>
-        <%for i in 0..11 do%>
-            <td>$ <%= @sales_profit_per_month_by_end_year[i].round(2)%></td>
-        <%end%>   
-        <td>$ <%= @ytd_by_end_year[1].round(2)%></td> 
+        <td>From <%= params[:end_year] %> to <%= params[:end_year].to_i + 1 %></td>
+        <% for i in 0..11 %>
+            <td>$ <%= @sales_profit_per_month_by_end_year[i].round(2) %></td>
+        <% end %>   
+        <td>$ <%= @ytd_by_end_year[1].round(2) %></td> 
     </tr>
     <tr>
         <td>Diff</td>
-        <%for i in 0..11 do%>
-            <td>$ <%= (@sales_profit_per_month_by_end_year[i]-@sales_profit_per_month_by_start_year[i]).round(2)%></td>
-        <%end%> 
-        <td>$ <%= (@ytd_by_end_year[1]-@ytd_by_start_year[1]).round(2)%></td>
+        <% for i in 0..11 %>
+            <td>$ <%= (@sales_profit_per_month_by_end_year[i] - @sales_profit_per_month_by_start_year[i]).round(2) %></td>
+        <% end %> 
+        <td>$ <%= (@ytd_by_end_year[1] - @ytd_by_start_year[1]).round(2) %></td>
     </tr>
     <tr>
         <td>%</td>
-        <%for i in 0..11 do%>
-            <td> <%= ((@sales_profit_per_month_by_end_year[i]-@sales_profit_per_month_by_start_year[i])*100/@sales_profit_per_month_by_start_year[i]).round(2) %> </td>
-        <%end%>
-        <td><%= ((@ytd_by_end_year[1]-@ytd_by_start_year[1])*100/-@ytd_by_start_year[1]).round(2)%></td>
+        <% for i in 0..11 %>
+            <td> <%= ((@sales_profit_per_month_by_end_year[i] - @sales_profit_per_month_by_start_year[i]) * 100 / @sales_profit_per_month_by_start_year[i]).round(2) %> </td>
+        <% end %>
+        <td><%= ((@ytd_by_end_year[1] - @ytd_by_start_year[1]) * 100 / -@ytd_by_start_year[1]).round(2) %></td>
     </tr>
     <tr>
-        <td>January - <%=params[:start_year]%> (MTD)</td>
-        <td>$ <%= @mtd_by_start_year[1].round(2)%></td>
+        <td>January - <%= params[:start_year] %> (MTD)</td>
+        <td>$ <%= @mtd_by_start_year[1].round(2) %></td>
         <td colspan="12"></td>
     </tr>
     <tr>
-        <td>January - <%=params[:end_year]%> (MTD)</td>
-        <td>$ <%= @mtd_by_end_year[1].round(2)%></td>
-        <td colspan="12">Percentage change: <%= ((@mtd_by_end_year[1]-@mtd_by_start_year[1])*100/@mtd_by_start_year[1]).round(2)%>%</td>
+        <td>January - <%= params[:end_year] %> (MTD)</td>
+        <td>$ <%= @mtd_by_end_year[1].round(2) %></td>
+        <td colspan="12">Percentage change: <%= ((@mtd_by_end_year[1] - @mtd_by_start_year[1]) * 100 / @mtd_by_start_year[1]).round(2) %>%</td>
     </tr>         
 </table>
